<?xml version="1.0"?>
<resources>
    <string name="app_name">Advanced settings</string>
    <string name="reboot_needed">Please, reboot to apply changes.</string>

    <!-- Implemented -->
    <string name="storages_category">Storages</string>
    <string name="main_storage_title">Main storage</string>
    
    <string name="btn_func_category">Extra button</string>
    <string name="btn_func_app">Short down action</string>
    <string name="btn_func_hint">nothing</string>
    <string name="btn_func_app2">Long down action</string>
    <string name="btn_func_hint2">nothing</string>
    
    <string name="cal_category">Calibration</string>
    <string name="btn_g_cal">G-sensor calibration</string>
    <string name="btn_g_cal_hint">Press to open calibration interface</string>
    <string name="btn_g_cal_failure">Unable to start G-sensor calibration activity</string>
    
    <string name="noise_category">Noise Cancellation</string>
    <string name="swt_spkr">In speaker mode</string>
    <string name="swt_call">In voice calls</string>
    <string name="swt_voice_rec">During voice recording</string>
    <string name="swt_audio_rec">During audio recording</string>

    <string name="storage_datamedia">Internal storage</string>
    <string name="storage_usbmsc">Internal SD</string>
    <string name="storage_sdcard">SD card</string>
</resources>
